CardWebClient, CircuitBreaker and security added
